third_party/rust/serde_repr/tests/ui/non_unit_variant.stderr
error: must be a unit variant
 --> $DIR/non_unit_variant.rs:6:5
  |
6 |     Two(u8),
  |     ^^^
